[tool.poetry]
name = "hime"
version = "1.0.0"
description = ""
authors = ["AlexandreSenpai <alexandrebsramos@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.10"
numpy = "^2.0.1"
pillow = "^10.4.0"
deskew = "^1.5.1"
opencv-python = "^4.10.0.84"
wand = "^0.6.13"
easyocr = "^1.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
